test/function/fail/ref_self_argument.rs
struct Something;

impl Something {
    #[proc::function]
    fn test(&self) -> proc::TokenStream {
        todo!()
    }
}

fn main() {}
